src/components/molecules/plan/plan.scss
@use "../../variables" as *;

.plan-wrapper {

	.plan {
		list-style: none;
		padding: 0;
		text-align: center;
		font-family: $v_fontfamily_gothic;
		margin-bottom: 24px;

		@media screen and (min-width: $v_breakpoint_md) {
			margin-bottom: 0;
		}

		li {
			padding: 20px 0;
		}

		li:nth-child(n+2) {
			border: 1px solid $v_gray_gainsboro;
			border-top: none;
		}

		li:nth-child(1) {
			background-color: $v_orange_zorba;
			color: $v_white;
			font-size: $v_fontsize_l;
		}

		li:nth-child(2) {
			background-color: $v_gray_desertStorm;
			padding: 24px 0;

			.plan-money {
				font-size: $v_fontsize_xxl;
				color: $v_orange_bistre;
				margin-bottom: 16px;
				font-weight: bold;

				&::before {
					content: "￥";
					font-size: $v_fontsize_l;
					margin-left: 4px;
				}
			}
		}
	}

	@media screen and (min-width: $v_breakpoint_md) {
		width: 220px;
	}

	.plan-borderd {
		border: 5px solid $v_orange_bistre;

		li:nth-child(1) {
			background-color: $v_orange_bistre;
		}
	}
}

